--- a/css/output.css
+++ b/css/output.css
@@ -7,6 +7,9 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-slate-50: oklch(0.984 0.003 247.858);
+    --color-slate-100: oklch(0.968 0.007 247.896);
+    --color-white: #fff;
     --spacing: 0.25rem;
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
@@ -242,6 +245,24 @@
   .border-t-\[hsl\(212\,86\%\,64\%\)\] {
     border-top-color: hsl(212,86%,64%);
   }
+  .bg-\[\#697077\] {
+    background-color: #697077;
+  }
+  .bg-\[hsl\(0\,0\%\,100\%\)\] {
+    background-color: hsl(0,0%,100%);
+  }
+  .bg-\[hsl\(234\,12\%\,34\%\)\] {
+    background-color: hsl(234,12%,34%);
+  }
+  .bg-slate-50 {
+    background-color: var(--color-slate-50);
+  }
+  .bg-slate-100 {
+    background-color: var(--color-slate-100);
+  }
+  .bg-white {
+    background-color: var(--color-white);
+  }
   .px-7 {
     padding-inline: calc(var(--spacing) * 7);
   }
@@ -250,6 +271,9 @@
   }
   .pt-14 {
     padding-top: calc(var(--spacing) * 14);
+  }
+  .pt-16 {
+    padding-top: calc(var(--spacing) * 16);
   }
   .pb-11 {
     padding-bottom: calc(var(--spacing) * 11);
@@ -363,6 +387,21 @@
   .sm\:self-center {
     @media (width >= 40rem) {
       align-self: center;
+    }
+  }
+  .sm\:pt-18 {
+    @media (width >= 40rem) {
+      padding-top: calc(var(--spacing) * 18);
+    }
+  }
+  .sm\:pt-22 {
+    @media (width >= 40rem) {
+      padding-top: calc(var(--spacing) * 22);
+    }
+  }
+  .sm\:pt-24 {
+    @media (width >= 40rem) {
+      padding-top: calc(var(--spacing) * 24);
     }
   }
   .sm\:text-3xl {
